--- a/Mcdonald/Mcdonald/View/MainWindow.xaml
+++ b/Mcdonald/Mcdonald/View/MainWindow.xaml
@@ -5,8 +5,154 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Mcdonald"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow">
+    <Window.Resources>
+        <Style x:Key="CategoryTitleStyle" TargetType="TextBlock" >
+            <Setter Property="FontSize" Value="15" />
+            <Setter Property="HorizontalAlignment" Value="Right" />
+            <Setter Property="VerticalAlignment" Value="Bottom" />
+            <Setter Property="Foreground" Value="#424242" />
+            <Setter Property="Padding" Value="10" />
+        </Style>
+        <Style x:Key="CategoryImageStyle" TargetType="Image">
+            <Setter Property="HorizontalAlignment" Value="Left" />
+        </Style>
+        <Style x:Key="FoodImageStyle" TargetType="Image">
+            <Setter Property="Width" Value="250" />
+            <Setter Property="Height" Value="250" />
+        </Style>
+        <Style x:Key="FoodTitleStyle" TargetType="TextBlock">
+            <Setter Property="FontSize" Value="24" />
+            <Setter Property="FontWeight" Value="Bold" />
+            <Setter Property="HorizontalAlignment" Value="Center" />
+            <Setter Property="Foreground" Value="#424242" />
+            <Setter Property="Margin" Value="20" />
+        </Style>
+        <Style x:Key="FoodPriceStyle" TargetType="TextBlock">
+            <Setter Property="FontSize" Value="20" />
+            <Setter Property="Foreground" Value="#424242" />
+            <Setter Property="HorizontalAlignment" Value="Center" />
+            <Setter Property="Margin" Value="10" />
+        </Style>
+        <Style x:Key="FoodCountStyle" TargetType="TextBox">
+            <Setter Property="FontSize" Value="20" />
+            <Setter Property="Height" Value="50" />
+            <Setter Property="Width" Value="130" />
+            <Setter Property="Padding" Value="10" />
+            <Setter Property="Margin" Value="10" />
+        </Style>
+        <Style x:Key="FoodCountBtn" TargetType="Button">
+            <Setter Property="Width" Value="40" />
+            <Setter Property="Height" Value="40" />
+            <Setter Property="Margin" Value="10" />
+            <Setter Property="Background" Value="White" />
+            <Setter Property="FontSize" Value="20" />
+            <Setter Property="FontWeight" Value="Bold" />
+            <Setter Property="BorderBrush" Value="#CED4DA" />
+            <Setter Property="Foreground" Value="Gray" />
+        </Style>
+        <Style x:Key="SelectedImageStyle" TargetType="Image">
+            <Setter Property="Height" Value="70" />
+            <Setter Property="Width" Value="70" />
+            <Setter Property="HorizontalAlignment" Value="Left" />
+        </Style>
+        <Style x:Key="SelectedNameStyle" TargetType="TextBlock">
+            
+        </Style>
+        <Style x:Key="SelectedPriceStyle" TargetType="TextBlock">
+            
+        </Style>
+        <Style x:Key="SelectedCountStyle" TargetType="TextBlock">
+            
+        </Style>
+    </Window.Resources>
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="70" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="0">
+            <Image Source="/Assets/Mcdonald_logo.jpg" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="40,0,0,0" />
+        </Grid>
+
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="230" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="230" />
+            </Grid.ColumnDefinitions>
+            <Grid Grid.Column="0">
+                <ListView x:Name="lvCategory" SelectionChanged="LvCategory_SelectionChanged">
+                    <ListView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel Orientation="Vertical"></WrapPanel>
+                        </ItemsPanelTemplate>
+                    </ListView.ItemsPanel>
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid Height="50" Width="210">
+                                <Image Source="{Binding ImagePath}" Style="{StaticResource CategoryImageStyle}" />
+                                <TextBlock Text="{Binding Title}" Style="{StaticResource CategoryTitleStyle}"/>
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </Grid>
+            <Grid Grid.Column="1">
+                <ListView x:Name="lvFood" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Hidden">
+                    <ListView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel Orientation="Horizontal"></WrapPanel>
+                        </ItemsPanelTemplate>
+                    </ListView.ItemsPanel>
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Width="310" Height="470" >
+                                <TextBlock Text="{Binding Name}" Style="{StaticResource FoodTitleStyle}" />
+                                <TextBlock Text="{Binding Price}" Style="{StaticResource FoodPriceStyle}" />
+                                <Image Source = "{Binding ImagePath}" Style="{StaticResource FoodImageStyle}" />
+                                <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Margin="20" >
+                                    <TextBox Text="{Binding Count}" Style="{StaticResource FoodCountStyle}" />
+                                    <Border>
+                                        <Border.Effect>
+                                            <DropShadowEffect ShadowDepth="1" BlurRadius="10" Color="#CED4DA" />
+                                        </Border.Effect>
+                                        <Button Content="+" Click="BtnPlus_Click" Style="{StaticResource FoodCountBtn}"/>
+                                    </Border>
+                                    <Border>
+                                        <Border.Effect>
+                                            <DropShadowEffect ShadowDepth="1" BlurRadius="10" Color="#CED4DA" />
+                                        </Border.Effect>
+                                        <Button Content="-" Click="BtnMinus_Click" Style="{StaticResource FoodCountBtn}"/>
+                                    </Border>
+                                </StackPanel>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </Grid>
+            <Grid Grid.Column="2">
+                <ListView x:Name="lvSelected">
+                    <ListView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel Orientation="Vertical"></WrapPanel>
+                        </ItemsPanelTemplate>
+                    </ListView.ItemsPanel>
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid Height="70" Width="210">
+                                <Image Source="{Binding ImagePath}" Style="{StaticResource SelectedImageStyle}" />
+                                <StackPanel HorizontalAlignment="Right" VerticalAlignment="Center" >
+                                    <TextBlock Text="{Binding Name}" Style="{StaticResource SelectedNameStyle}" />
+                                    <TextBlock Text="{Binding TotalPrice}" Style="{StaticResource SelectedPriceStyle}" />
+                                    <TextBlock Text="{Binding Count}" Style="{StaticResource SelectedCountStyle}" />
+                                </StackPanel>
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </Grid>
+        </Grid>
     </Grid>
 </Window>
