--- a/Mcdonald/Mcdonald/View/OrderCtrl.xaml
+++ b/Mcdonald/Mcdonald/View/OrderCtrl.xaml
@@ -90,11 +90,20 @@
         </Style>
         <Style x:Key="PaymentBtnStyle" TargetType="Button">
             <Setter Property="Height" Value="50" />
-            <Setter Property="Width" Value="200" />
+            <Setter Property="Width" Value="100" />
             <Setter Property="Content" Value="PAYMENT" />
-            <Setter Property="FontSize" Value="30" />
+            <Setter Property="FontSize" Value="18" />
             <Setter Property="Background" Value="#FF2121" />
             <Setter Property="Foreground" Value="#FFC323" />
+            <Setter Property="FontWeight" Value="Bold" />
+        </Style>
+        <Style x:Key="OrderBtnStyle" TargetType="Button">
+            <Setter Property="Height" Value="50" />
+            <Setter Property="Width" Value="100" />
+            <Setter Property="Content" Value="ORDER" />
+            <Setter Property="FontSize" Value="18" />
+            <Setter Property="Background" Value="#FFC323" />
+            <Setter Property="Foreground" Value="#FF2121" />
             <Setter Property="FontWeight" Value="Bold" />
         </Style>
     </UserControl.Resources>
@@ -226,12 +235,20 @@
                             <TextBlock Text="CARD" Style="{StaticResource PaymentItemStyle}"/>
                         </ComboBoxItem>
                     </ComboBox>
-                    <Border>
-                        <Border.Effect>
-                            <DropShadowEffect ShadowDepth="1" BlurRadius="10" Color="#CED4DA" />
-                        </Border.Effect>
-                        <Button Style="{StaticResource PaymentBtnStyle}" Click="PaymentBtn_Click"/>
-                    </Border>
+                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="5">
+                        <Border>
+                            <Border.Effect>
+                                <DropShadowEffect ShadowDepth="1" BlurRadius="10" Color="#CED4DA" />
+                            </Border.Effect>
+                            <Button Style="{StaticResource OrderBtnStyle}" Click="OrderBtn_Click"/>
+                        </Border>
+                        <Border>
+                            <Border.Effect>
+                                <DropShadowEffect ShadowDepth="1" BlurRadius="10" Color="#CED4DA" />
+                            </Border.Effect>
+                            <Button Style="{StaticResource PaymentBtnStyle}" Click="PaymentBtn_Click"/>
+                        </Border>
+                    </StackPanel>
                 </StackPanel>
             </Grid>
         </Grid>
