--- a/Mcdonald/Mcdonald/View/SeatCtrl.xaml
+++ b/Mcdonald/Mcdonald/View/SeatCtrl.xaml
@@ -7,10 +7,12 @@
              mc:Ignorable="d" >
     <UserControl.Resources>
         <Style x:Key="SeatTextStyle" TargetType="TextBlock" >
-            <Setter Property="HorizontalAlignment" Value="Center" />
-            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="HorizontalAlignment" Value="Left" />
+            <Setter Property="VerticalAlignment" Value="Top" />
             <Setter Property="FontSize" Value="25" />
             <Setter Property="FontWeight" Value="Bold" />
+            <Setter Property="Width" Value="300px" />
+            <Setter Property="Height" Value="300px" />
         </Style>
     </UserControl.Resources>
     <Grid>
