--- a/Mcdonald/Mcdonald/View/SeatCtrl.xaml
+++ b/Mcdonald/Mcdonald/View/SeatCtrl.xaml
@@ -40,6 +40,33 @@
                 <DataTemplate>
                     <Grid Width="300" Height="300">
                         <TextBlock Text="{Binding Idx}" Style="{StaticResource SeatTextStyle}"/>
+                        <ListView x:Name="lvFood" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Hidden" Visibility="Visible">
+                          <ListView.ItemContainerStyle>
+                            <Style TargetType="{x:Type ListViewItem}">
+                              <Setter Property="Background" Value="Transparent" />
+                              <Setter Property="Template">
+                                <Setter.Value>
+                                  <ControlTemplate TargetType="{x:Type ListViewItem}">
+                                    <ContentPresenter />
+                                  </ControlTemplate>
+                                </Setter.Value>
+                              </Setter>
+                            </Style>
+                          </ListView.ItemContainerStyle>
+                          <ListView.ItemsPanel>
+                            <ItemsPanelTemplate>
+                              <WrapPanel Orientation="Horizontal"></WrapPanel>
+                            </ItemsPanelTemplate>
+                          </ListView.ItemsPanel>
+                          <ListView.ItemTemplate>
+                            <DataTemplate>
+                              <Grid Width="300" Height="300">
+                                <TextBlock Text="{Binding Idx}" Style="{StaticResource SeatTextStyle}"/>
+
+                              </Grid>
+                            </DataTemplate>
+                          </ListView.ItemTemplate>
+                        </ListView>
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
